syntax = "proto3";

// buf:lint:ignore PACKAGE_VERSION_SUFFIX
package apps.app3.pb;

option go_package = "github.com/xurvan/monorepo-template/apps/app3";

service HelloService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}
